# codemap

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  constraints.txt  pyproject.toml
backend/src/codemap/: __init__.py  config.py  pipeline.py
backend/src/codemap/analyzer/: graph.py  languages.py  models.py  parser.py
backend/src/codemap/api/: app.py  chat.py  recents.py
backend/src/codemap/explainer/: cache.py  explainer.py  skeleton.py
backend/src/codemap/indexer/: chunker.py  index.py
backend/src/codemap/llm/: client.py
backend/tests/: test_api.py  test_cache.py  test_chat.py  test_chunker.py  test_config.py  test_deep_languages.py  test_explainer.py  test_graph.py  test_index.py  test_llm_client.py  test_multilang.py  test_parser.py  test_pipeline.py  test_recents.py  test_skeleton.py
backend/tests/fixtures/demo_polyglot/c/src/: main.c
backend/tests/fixtures/demo_polyglot/cpp/: geometry.hpp  main.cpp  widget.h
backend/tests/fixtures/demo_polyglot/go/: main.go
backend/tests/fixtures/demo_polyglot/go/util/: count.go  strings.go
backend/tests/fixtures/demo_polyglot/php/src/: index.php
backend/tests/fixtures/demo_polyglot/ruby/: app.rb
backend/tests/fixtures/demo_polyglot/ruby/lib/: greeter.rb
backend/tests/fixtures/demo_polyglot/rust/src/: helpers.rs  main.rs
backend/tests/fixtures/demo_polyglot/scripts/: tool.lua
backend/tests/fixtures/demo_polyglot/web/: api.ts  broken.ts  util.js
backend/tests/fixtures/demo_polyglot/web/components/: index.ts
backend/tests/fixtures/demo_repo/app/: broken.py  main.py
(+47 files in other folders)
